<resources>
    <string name="app_name">Application1</string>
    <string name="C">C</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="punto">.</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="suma">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="resta">-</string>
    <string name="_9">9</string>
    <string name="multi">*</string>
    <string name="_0">0</string>
    <string name="igual">=</string>
    <string name="divi">/</string>
    <string name="Calc">Calculator</string>
    <string name="imc">IMC</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>