<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myFondo"
    tools:context=".CALC">

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/myblue"
        android:text="@string/punto"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btnC"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:text="@string/C"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="294dp"
        android:layout_height="65dp"
        android:layout_marginTop="380dp"
        android:backgroundTint="@color/mymora"
        android:text="@string/igual"
        app:layout_constraintEnd_toEndOf="@+id/btnSuma"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/edtPantalla" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/btnPunto"
        app:layout_constraintTop_toTopOf="@+id/btnPunto" />

    <Button
        android:backgroundTint="@color/mypink"
        android:id="@+id/btnMulti"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/multi"
        app:layout_constraintEnd_toEndOf="@+id/btnDivi"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

    <Button
        android:backgroundTint="@color/mypink"
        android:id="@+id/btnResta"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="@+id/btnMulti"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <Button
        android:backgroundTint="@color/mypink"
        android:id="@+id/btnSuma"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/suma"
        app:layout_constraintEnd_toEndOf="@+id/btnResta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnResta"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <Button
        android:id="@+id/btnDivi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:backgroundTint="@color/mypink"
        android:text="@string/divi"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toTopOf="@+id/btnC" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/_7"
        app:layout_constraintEnd_toEndOf="@+id/btnPunto"
        app:layout_constraintStart_toStartOf="@+id/btnPunto"
        app:layout_constraintTop_toBottomOf="@+id/btnPunto" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:text="@string/_8"
        app:layout_constraintEnd_toEndOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="@+id/btnC"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:text="@string/_5"
        app:layout_constraintEnd_toEndOf="@+id/btn8"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/_4"
        app:layout_constraintEnd_toEndOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="@+id/btn6"
        app:layout_constraintStart_toStartOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toEndOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:backgroundTint="@color/myblue"
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toEndOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <TextView
        android:textColor="@color/mymora"
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/Calc"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPantalla"
        android:layout_width="329dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/btnDivi"
        app:layout_constraintStart_toStartOf="@+id/btnPunto"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>